entregables/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: la-hucha-de-paredes
  labels:
    name: la-hucha-de-paredes
    environment: production
